Update file links in index.html to include utility-tools directory

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ layout: null
                     {% if file.path contains dir and file.extname == '.html' %}
                     <div class="group p-4 bg-white rounded-lg shadow-sm hover:shadow-md transition-all duration-200">
                         <a
-                            href="{{ file.path }}"
+                            href="utility-tools/{{ file.path }}"
                             class="block"
                         >
                             <div class="flex items-center space-x-3">
